--- a/dev/docker/php/conf.d/xdebug.ini
+++ b/dev/docker/php/conf.d/xdebug.ini
@@ -3,5 +3,6 @@ zend_extension=xdebug
 [xdebug]
 xdebug.mode=debug
 xdebug.client_host=host.docker.internal
-xdebug.start_with_request=yes
+xdebug.start_with_request=trigger
 xdebug.client_port=9090
+xdebug.discover_client_host = 1
