--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     volumes:
       - ./:/app
       - ./dev/docker/php/conf.d/xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
-    entrypoint: ./app/docker/entrypoint.app.sh
+    entrypoint: /app/dev/docker/entrypoint.app.sh
     extra_hosts:
     - "host.docker.internal:host-gateway"
   node:
@@ -45,7 +45,7 @@ services:
     user: node
     volumes:
       - ./:/app
-    entrypoint: ./app/docker/entrypoint.node.sh
+    entrypoint: /app/docker/entrypoint.node.sh
   mailhog:
     image: mailhog/mailhog
     ports:
