--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -29,6 +29,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
 
+      - name: Install Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+
       - name: Build Docker images
         run: docker-compose build
 
@@ -45,3 +50,6 @@ jobs:
 
       - name: Run tests
         run: docker-compose run --rm app php vendor/bin/phpunit
+
+      - name: Clean up
+        run: docker-compose down --volumes
