--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -37,6 +37,15 @@ jobs:
       - name: Build Docker images
         run: docker-compose build
 
+      - name: Start Up the Docker Containers
+        run: docker-compose up
+
+      - name: Run Database Migrations
+        run: docker-compose run app php artisan migrate --database=mysql_testing
+
+      - name: Seed Database 
+        run: docker-compose run app php artisan db:seed --class=DummyContentSeeder --database=mysql_testing
+
       - name: Run tests
         run: docker-compose run --rm app php vendor/bin/phpunit
 
