--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -34,8 +34,19 @@ jobs:
           sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
 
-      - name: Build Docker images
-        run: docker-compose build
+      - name: Build the project
+        run: npm run build
 
-      - name: Run tests
-        run: ./vendor/bin/phpunit tests
+      - name: Build Docker images
+        run: docker-compose build -d
+
+      - name: Run Migration
+        run: docker-compose run app php artisan migrate --database=mysql_testing
+
+      - name: Run Seeder
+        run: docker-compose run app php artisan db:seed --class=DummyContentSeeder --database=mysql_testing
+
+      - name: Run Test
+        run: docker-compose run app php vendor/bin/phpunit
+        
+        
