--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -40,6 +40,9 @@ jobs:
       - name: Start Docker containers
         run: docker-compose up -d
 
+      - name: Run Composer Install
+        run: docker-compose exec app composer install
+
       - name: Run Migration
         run: docker-compose run app php artisan migrate --database=mysql_testing
 
