--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -51,5 +51,8 @@ jobs:
 
       - name: Run Test
         run: docker-compose run app php vendor/bin/phpunit
+
+      - name: Clean up Docker
+        run: docker-compose down -v
         
         
