--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -34,14 +34,14 @@ jobs:
           sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
 
+      - name: Install Dependencies
+        run: composer install
+
       - name: Build Docker images
         run: docker-compose build
 
       - name: Start Docker containers
         run: docker-compose up -d
-
-      - name: Update Composer
-        run: docker-compose run app composer self-update
 
       - name: Run Migration
         run: docker-compose run app php artisan migrate --database=mysql_testing
