--- a/.env.example.complete
+++ b/.env.example.complete
@@ -9,7 +9,7 @@
 
 # Application environment
 # Can be 'production', 'development', 'testing' or 'demo'
-APP_ENV=production
+APP_ENV=development
 
 # Enable debug mode
 # Shows advanced debug information and errors.
@@ -19,7 +19,7 @@ APP_DEBUG=false
 # Application key
 # Used for encryption where needed.
 # Run `php artisan key:generate` to generate a valid key.
-APP_KEY=SomeRandomString
+APP_KEY=base64:3tlXKXG2BAnOH3Z8aB2dfzHXSsK98ZT7ELkFgG8IXJM=
 
 # Application URL
 # This must be the root URL that you want to host BookStack on.
