--- a/.env.example.complete
+++ b/.env.example.complete
@@ -9,7 +9,7 @@
 
 # Application environment
 # Can be 'production', 'development', 'testing' or 'demo'
-APP_ENV=development
+APP_ENV=local
 
 # Enable debug mode
 # Shows advanced debug information and errors.
