--- a/.env.example
+++ b/.env.example
@@ -18,13 +18,13 @@ APP_KEY=base64:3tlXKXG2BAnOH3Z8aB2dfzHXSsK98ZT7ELkFgG8IXJM=
 # If you change this in the future you may need to run a command
 # to update stored URLs in the database. Command example:
 # php artisan bookstack:update-url https://old.example.com https://new.example.com
-APP_URL=https://example.com
+APP_URL=http://localhost:8080
 
 # Database details
 DB_HOST=localhost
-DB_DATABASE=database_database
-DB_USERNAME=database_username
-DB_PASSWORD=database_user_password
+DB_DATABASE=scc1
+DB_USERNAME=root
+DB_PASSWORD=
 
 # Mail system to use
 # Can be 'smtp' or 'sendmail'
@@ -45,4 +45,4 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-APP_ENV=local
+APP_ENV = local
