--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -37,6 +37,9 @@ jobs:
       - name: Install Dependencies
         run: composer install
 
+      - name: Cp env
+        run: cp .env.example .env
+
       - name: Build Docker images
         run: docker-compose build
 
