--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -20,6 +20,8 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+        with: 
+          compose-file: "docker-compose.yml"
 
       - name: Cache Docker layers
         uses: actions/cache@v3
