--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -48,6 +48,9 @@ jobs:
       - name: Start Docker containers
         run: docker-compose up -d db
 
+      - name: Check Container lists
+        run: docker ps -a
+
       - name: Run Migration
         run: docker-compose run app php artisan migrate --database=mysql_testing
 
