--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -49,9 +49,10 @@ jobs:
         run: docker-compose up -d
 
       - name: Check Container lists
-        run: 
-          docker ps -a
-          docker-compose logs db
+        run: docker ps -a
+
+      - name: Check logs
+        run:  docker-compose logs db
 
       - name: Run Migration
         run: docker-compose run app php artisan migrate --database=mysql_testing
