--- a/.env.example
+++ b/.env.example
@@ -21,12 +21,10 @@ APP_KEY=base64:3tlXKXG2BAnOH3Z8aB2dfzHXSsK98ZT7ELkFgG8IXJM=
 APP_URL=http://localhost:8080
 
 # Database details
-DB_CONNECTION: mysql
-DB_HOST: db
-DB_PORT: 3306
-DB_DATABASE: bookstack-dev
-DB_USERNAME: bookstack-test
-DB_PASSWORD: bookstack-test
+DB_HOST=localhost
+DB_DATABASE=scc1
+DB_USERNAME=root
+DB_PASSWORD=
 
 # Mail system to use
 # Can be 'smtp' or 'sendmail'
